"only files" option added.

--- a/crowdin.cfg
+++ b/crowdin.cfg
@@ -1,16 +1,19 @@
 [PATHS]
-; Base path for converted files.
-base = .
-; Full path to the converted files. For example:
-; /{folder}/{lang}/ or /{lang}/
-path = /{folder}/{subfolder}/{lang}/
+; `base-path` - Base path for converted files.
+; `path` - Full path to the converted files. For example:
+; /translations/{lang}
+base-path = .
+path = /translations/{lang}/
 
 [FILE]
-; if empty - will use original filename exported from Crowdin. Otherwise,
-;{lang} placeholder available.
-filename = {lang}
-; txt, php, etc.
+; `filename` - if empty - will use original filename exported from Crowdin.
+; Otherwise, {lang} placeholder available.
+; `extension` - txt, php, etc.
+; `only_files` - comma separated list of files to convert.
+; Leave it blank if you want to convert all files.
+filename =
 extension = php
+only_files = Page.csv, Sub Page.csv
 
 [TEMPLATES]
 ; {n} - new line, {t} - tab.
@@ -19,4 +22,4 @@ item-template = {t}"{key}" => "{value}",{n}
 
 [KEYS]
 ; project-name = api-key
-test-project-name = projects_api_key
+; test-project-name = projects_api_key
