Use Pyhton 3 by default. Add configparser to the script requirements.

--- a/crowdin.cfg
+++ b/crowdin.cfg
@@ -10,10 +10,11 @@ path = /translations/{lang}/
 ; Otherwise, {lang} placeholder available.
 ; `extension` - txt, php, etc.
 ; `only_files` - comma separated list of files to convert.
+; For example: page.csv, second page.csv
 ; Leave it blank if you want to convert all files.
 filename =
 extension = php
-only_files = Page.csv, Sub Page.csv
+only_files = 
 
 [TEMPLATES]
 ; {n} - new line, {t} - tab.
@@ -23,3 +24,4 @@ item-template = {t}"{key}" => "{value}",{n}
 [KEYS]
 ; project-name = api-key
 ; test-project-name = projects_api_key
+
